<package format="3">
  <name>mapcloud</name>
  <version>0.1.0</version>
  <description>ROS 2 package for visualizing map and point cloud data</description>
  <maintainer email="2364174415@qq.com">lespauvres</maintainer>
  <license>BSD-2-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>pcl</depend>
  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
